...
    
    func didClickOnPlayerButton(_ sender: RHSCButtonTableViewCell?, buttonIndex: Int) {
        let tbc = self.tabBarController as! RHSCTabBarController
        let ml = tbc.memberList
        
        let optionMenu = UIAlertController(title: nil, message: "Choose Player", preferredStyle: .actionSheet)
        let memberAction = UIAlertAction(title: "Member", style: .default, handler:
            {
                (alert: UIAlertAction!) -> Void in
//                print("Member")
                switch buttonIndex {
                case 2:
                    self.performSegue(withIdentifier: "ChoosePlayer2", sender: self)
...
