...

    override func viewDidLoad() {
        super.viewDidLoad()
//        self.tableView.separatorColor = UIColor.blackColor()
//        self.tableView.separatorInset = UIEdgeInsetsZero
        
        self.tableView.accessibilityIdentifier = "CourtTimes"
                
        // Uncomment the following line to preserve selection between presentations.
        self.clearsSelectionOnViewWillAppear = false;
    
        // Uncomment the following line to display an Edit button in the navigation bar for this view controller.
        // self.navigationItem.rightBarButtonItem = self.editButtonItem;
...
