...
                        <nil key="highlightedColor"/>
                    </label>
                    <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DmB-Fp-uJM">
                        <rect key="frame" x="82" y="7" width="230" height="30"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <color key="backgroundColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" label="Player2Val"/>
                        <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
                        <state key="normal">
                            <attributedString key="attributedTitle">
                                <fragment content="Button">
                                    <attributes>
                                        <font key="NSFont" size="15" name="HelveticaNeue"/>
...
